Side menus fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Slabo+27px);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif);
 body {
   font-size: 17px;
   padding: 0px;
@@ -68,14 +69,14 @@ body {
     position: absolute;
     background-color: #FA4B2A;
     width: 80px;
-    height: 60px;
+    height: 55px;
     float: right;
     right: 2px;
     margin-top: -60px;
     margin-bottom: 5px;
     text-align: center;
     border-left: 1px solid #FFF;
-    padding-top: 7px; }
+    padding-top: 12px; }
     #mob_topbar #new_articles a {
       color: white;
       text-decoration: none;
@@ -93,6 +94,158 @@ body {
         display: block;
         line-height: .5; }
 
+.extra_div {
+  display: none;
+  margin-top: 50px;
+  margin-left: 2%;
+  width: 1024px; }
+  .extra_div .first .logo {
+    background-color: #F82902;
+    width: 310px;
+    margin-left: -10px;
+    opacity: 0.9;
+    float: left;
+    z-index: 100;
+    padding: 15px 10px; }
+    .extra_div .first .logo img {
+      height: 50px; }
+    .extra_div .first .logo:hover {
+      opacity: 1; }
+  .extra_div .first #nicky {
+    height: 60px;
+    margin-top: 24px;
+    float: left; }
+  .extra_div .first .trending_now_dropdown {
+    height: 60px;
+    width: 475px;
+    margin-top: 24px;
+    position: absolute;
+    border-color: #8b8787;
+    margin-left: 427px;
+    background-color: white; }
+    .extra_div .first .trending_now_dropdown div {
+      font-family: "Oswald", sans-serif;
+      color: #FA4B2A;
+      font-size: 11px;
+      font-weight: 400;
+      padding: 5px 10px 20px;
+      background-color: white;
+      border: 1px solid #d0caca; }
+      .extra_div .first .trending_now_dropdown div a {
+        font-family: "Lora", serif;
+        color: black;
+        text-decoration: none;
+        font-size: 13px;
+        font-weight: 500; }
+        .extra_div .first .trending_now_dropdown div a:hover {
+          color: #FA4B2A; }
+    .extra_div .first .trending_now_dropdown span {
+      height: 60px;
+      width: 40px;
+      background-color: #eadfdf;
+      position: absolute;
+      float: right;
+      left: 475px;
+      top: 0px;
+      text-align: center; }
+      .extra_div .first .trending_now_dropdown span img {
+        width: 14px;
+        margin-top: 25px;
+        opacity: 0.5; }
+      .extra_div .first .trending_now_dropdown span:hover img {
+        opacity: 1; }
+  .extra_div .first #new_articles {
+    font-family: "Roboto", sans-serif;
+    display: inline-block;
+    background-color: #F82902;
+    opacity: 0.9;
+    width: 82px;
+    height: 55px;
+    margin-left: 512px;
+    top: 24px;
+    padding-top: 10px;
+    position: relative;
+    text-align: center;
+    border-left: 1px solid #FFF; }
+    .extra_div .first #new_articles a {
+      color: white;
+      text-decoration: none;
+      line-height: 1; }
+      .extra_div .first #new_articles a strong {
+        font-size: 27px; }
+      .extra_div .first #new_articles a span {
+        font-size: 10px;
+        font-weight: 700;
+        letter-spacing: 1; }
+    .extra_div .first #new_articles:hover {
+      opacity: 1; }
+  .extra_div .first .connects {
+    position: relative;
+    float: right;
+    right: 10px;
+    top: -80px; }
+    .extra_div .first .connects ul {
+      list-style-type: none; }
+      .extra_div .first .connects ul li {
+        display: inline;
+        opacity: 0.8;
+        margin-left: 10px; }
+        .extra_div .first .connects ul li img {
+          width: 20px; }
+        .extra_div .first .connects ul li:hover {
+          opacity: 1; }
+  .extra_div .menu_2nd {
+    width: 1024px;
+    height: 45px;
+    z-index: 90;
+    position: absolute;
+    background-color: #000;
+    top: 134px; }
+    .extra_div .menu_2nd ul {
+      text-transform: uppercase;
+      list-style-type: none;
+      margin-top: -5px;
+      height: 40px;
+      padding: 0px 0px;
+      margin: 0px 0px; }
+      .extra_div .menu_2nd ul li {
+        line-height: 2;
+        padding-left: 5px;
+        display: inline;
+        font-family: "Oswald", sans-serif;
+        color: white;
+        cursor: pointer;
+        height: 50px;
+        transition: 100ms all linear; }
+        .extra_div .menu_2nd ul li img {
+          width: 10px;
+          opacity: 0.4; }
+        .extra_div .menu_2nd ul li:hover {
+          color: #FA4B2A; }
+          .extra_div .menu_2nd ul li:hover img {
+            opacity: 1; }
+        .extra_div .menu_2nd ul li:last-child {
+          float: right; }
+          .extra_div .menu_2nd ul li:last-child img {
+            width: 20px;
+            margin-right: 20px;
+            margin-top: 5px;
+            opacity: 0.6; }
+            .extra_div .menu_2nd ul li:last-child img:hover {
+              opacity: 1; }
+      .extra_div .menu_2nd ul #login {
+        line-height: 3;
+        height: 65px;
+        background-color: #000; }
+        .extra_div .menu_2nd ul #login img {
+          float: left;
+          opacity: 1;
+          margin-left: 5px;
+          margin-top: 5px;
+          width: 30px; }
+        .extra_div .menu_2nd ul #login span {
+          font-size: 12px; }
+
 @media (min-width: 320px) and (max-width: 599px) {
   #mob_topbar #title {
     height: 30px;
@@ -107,22 +260,15 @@ body {
     height: 25px; } }
 @media (min-width: 700px) {
   #mob_topbar #trending_now_dropdown {
+    display: block; }
+  #mob_topbar #new_articles {
+    padding-top: 5px; } }
+@media (min-width: 1025px) {
+  #mob_topbar {
+    display: none; }
+
+  .extra_div {
     display: block; } }
-.home, .long, .review, .video, .us {
-  border-left: 4px solid #FA4B2A; }
-
-.tech, .cars {
-  border-left: 4px solid rgba(74, 233, 27, 0.75); }
-
-.science, .forums {
-  border-left: 4px solid #891bbd; }
-
-.video, .search {
-  border-left: 4px solid #347c98; }
-
-.enter, .design {
-  border-left: 4px solid #ff1903; }
-
 @media (min-width: 1024px) {
   .visible_sm {
     display: none !important; } }
@@ -146,63 +292,95 @@ body {
 
 .side_menu {
   width: 250px;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   float: left;
   z-index: 13;
   position: absolute;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   height: 100%;
   left: -250px;
   transition-property: transform, left, right;
   transition-delay: 0s, 0s, 0s;
   transition-timing-function: ease-in-out;
   transition-duration: 150ms; }
-  .side_menu li {
-    list-style: none;
-    background-color: #222;
-    border-top: 1px solid #2F2F2F;
-    margin-left: -40px;
-    padding-left: 10px;
-    height: 48px;
-    color: white;
-    line-height: 1;
-    cursor: pointer;
-    font-family: 'Pathway Gothic One', sans-serif;
+  .side_menu ul {
+    border-right: 3px solid #FA4B2A;
     text-transform: uppercase;
     list-style-type: none;
-    font-size: 20px; }
-    .side_menu li:hover {
-      color: #FA4B2A; }
-    .side_menu li img {
-      display: inline-block;
-      width: 21px;
-      max-height: 18px;
-      padding-top: 15px;
-      padding-right: 10px; }
-  .side_menu ul {
-    z-index: 5;
-    margin-top: 0px;
-    border-right: 2px solid #FA4B2A; }
-    .side_menu ul .long img {
-      padding-top: 25px; }
-    .side_menu ul .user {
-      background-color: #000;
-      height: 60px; }
-      .side_menu ul .user .login {
-        display: inline-block;
-        float: right;
-        min-width: 170px;
-        max-width: 180px;
-        line-height: 3; }
-      .side_menu ul .user .img {
-        width: 50px;
-        height: 50px;
-        display: inline-block; }
-        .side_menu ul .user .img img {
-          width: 36px;
-          min-height: 36px;
-          padding-top: 10px; }
+    z-index: 100;
+    overflow-y: auto;
+    margin-top: -5px;
+    background-color: #000;
+    width: 250px;
+    padding: 0px 0px;
+    margin: 0px 0px; }
+    .side_menu ul li {
+      line-height: 3;
+      padding-left: 15px;
+      background-color: #222;
+      font-family: "Oswald", sans-serif;
+      color: white;
+      border-bottom: 1px solid #2F2F2F;
+      cursor: pointer;
+      height: 50px;
+      border-left: 4px solid;
+      transition: 100ms all linear; }
+      .side_menu ul li img {
+        width: 20px;
+        padding-top: 5px;
+        margin-right: 15px; }
+      .side_menu ul li:hover {
+        color: #FA4B2A; }
+      .side_menu ul li:last-child {
+        border-left: 0px;
+        background-color: #000; }
+        .side_menu ul li:last-child img {
+          width: 30px;
+          margin-left: 10px;
+          opacity: 0.6; }
+          .side_menu ul li:last-child img:hover {
+            opacity: 1; }
+    .side_menu ul #login {
+      line-height: 4;
+      height: 65px;
+      border-left: 0px;
+      background-color: #000; }
+      .side_menu ul #login img {
+        float: left;
+        margin-left: 5px;
+        margin-top: 12px;
+        width: 35px; }
+      .side_menu ul #login span {
+        margin-left: 10px; }
+    .side_menu ul #home {
+      border-left-color: #FA4B2A; }
+    .side_menu ul #longform {
+      border-left-color: #8e2794; }
+    .side_menu ul #reviews {
+      border-left-color: #539c06; }
+    .side_menu ul #video {
+      border-left-color: #69261b; }
+    .side_menu ul #tech {
+      border-left-color: #212fed; }
+    .side_menu ul #science {
+      border-left-color: aqua; }
+    .side_menu ul #entertainment {
+      border-left-color: #F82902; }
+    .side_menu ul #cars {
+      border-left-color: #39e93b; }
+    .side_menu ul #design {
+      border-left-color: #988b1b; }
+    .side_menu ul #us_world {
+      border-left-color: #129890; }
+    .side_menu ul #forums {
+      border-left-color: #F82902; }
+    .side_menu ul #search {
+      border-left-color: #068eac; }
+    .side_menu ul #more {
+      border-left-color: #FA4B2A; }
 
 .notifsm {
   width: 250px;
@@ -241,11 +419,15 @@ body {
         background-color: #FA4B2A; }
       .notifsm ul li a {
         color: black;
+        font-family: "Droid Serif", serif;
+        font-weight: 300;
         text-decoration: none; }
         .notifsm ul li a:hover {
           color: #FA4B2A; }
     .notifsm ul .inactive {
-      font-size: .6rem; }
+      font-family: "Slabo 27px", serif;
+      font-size: 13px;
+      font-weight: 400; }
 
 .inactive {
   color: #4b433e; }
@@ -253,8 +435,13 @@ body {
 .contents {
   position: relative;
   margin-left: -10px;
-  margin-right: -20px; }
+  margin-right: -20px;
+  max-width: 1024px; }
 
+@media (min-width: 1024px) {
+  .contents {
+    margin-top: 63px;
+    margin-left: 2%; } }
 .byline {
   font-family: Helvetica,Arial,sans-serif;
   font-size: .75rem;
@@ -263,9 +450,6 @@ body {
   position: relative;
   font-weight: 300;
   margin: .25rem 0 0; }
-
-#h3 {
-  font-size: 2rem; }
 
 p {
   display: block;
@@ -380,7 +564,7 @@ h2 {
 #cntnt3 {
   background-image: url("../img/len.png"); }
   #cntnt3:after {
-    background-color: #292484;
+    background-color: #121982;
     background-image: -webkit-linear-gradient(135deg, #002f4b, #417711);
     background-image: -moz-linear-gradient(135deg, #002f4b, #417711);
     background-image: -o-linear-gradient(135deg, #002f4b, #417711);
