--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@ $article_font : 'Fjalla One', sans-serif;
 $side_menu_font : 'Oswald', sans-serif;
 $trending_now_dropdown_font : 'Lora', serif;
 $time_font : 'Slabo 27px', serif;
+$list_article_font : 'Droid Serif', serif;
 
 $title_orange : #FA4B2A;
 $title_red : #F82902;
@@ -100,14 +101,14 @@ body{
       position: absolute;
       background-color: #FA4B2A;
       width: 80px;
-      height: 60px;
+      height: 55px;
       float: right;
       right: 2px;
       margin-top: -60px;
       margin-bottom: 5px;
       text-align: center;
       border-left: 1px solid #FFF;
-      padding-top: 7px;
+      padding-top: 12px;
 
       a {
 
@@ -134,6 +135,221 @@ body{
   }
 }
 
+.extra_div {
+  display: none;
+  margin-top: 50px;
+  margin-left: 2%;
+  width: 1024px;
+
+  .first {
+    .logo {
+      background-color: $title_red;
+      width: 310px;
+      margin-left: -10px;
+      opacity: 0.9;
+      float: left;
+      z-index: 100;
+      padding: 15px 10px;
+      img {
+        height: 50px;
+      }
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+    #nicky {
+      height: 60px;
+      margin-top: 24px;
+      float: left;
+    }
+
+    .trending_now_dropdown {
+      height: 60px;
+      width: 475px;
+      margin-top: 24px;
+      position: absolute;
+      border-color: $grey2;
+      margin-left: 427px;
+      background-color: white;
+
+
+      div {
+        font-family: $side_menu_font;
+        color: $title_orange;
+        font-size: 11px;
+        font-weight: 400;
+        padding: 5px 10px 20px;
+        background-color: white;
+        border: 1px solid $grey5;
+
+        a {
+          font-family: $trending_now_dropdown_font;
+          color: black;
+          text-decoration: none;
+          font-size: 13px;
+          font-weight: 500;
+
+          &:hover {
+            color: $title_orange;
+          }
+        }
+      }
+
+      span {
+        height: 60px;
+        width: 40px;
+        background-color: $grey6;
+        position: absolute;
+        float: right;
+        left: 475px;
+        top: 0px;
+        text-align: center;
+        img {
+          width: 14px;
+          margin-top: 25px;
+          opacity: 0.5;
+        }
+
+        &:hover {
+          img {
+            opacity: 1;
+          }
+        }
+      }
+    }
+
+    #new_articles {
+      font-family: $title_font;
+      display: inline-block;
+      background-color: $title_red;
+      opacity: 0.9;
+      width: 82px;
+      height: 55px;
+      margin-left: 512px;
+      top: 24px;
+      padding-top: 10px;
+      position: relative;
+      text-align: center;
+      border-left: 1px solid #FFF;
+
+      a {
+
+        color: white;
+        text-decoration: none;
+        line-height: 1;
+
+        strong {
+          font-size: 27px;
+        }
+
+        span {
+          font-size: 10px;
+          font-weight: 700;
+          letter-spacing: 1;
+        }
+      }
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    .connects {
+      position: relative;
+      float: right;
+      right: 10px;
+      top: -80px;
+      ul{
+        list-style-type: none;
+        li {
+          display: inline;
+          opacity: 0.8;
+          margin-left: 10px;
+          img {
+            width: 20px;
+          }
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+
+  .menu_2nd {
+    width: 1024px;
+    height: 45px;
+    z-index: 90;
+    position: absolute;
+    background-color: #000;
+    top: 134px;
+
+    ul {
+      text-transform: uppercase;
+      list-style-type: none;
+      margin-top: -5px;
+      height: 40px;
+      padding: 0px 0px;
+      margin: 0px 0px;
+
+      li {
+        line-height: 2;
+        padding-left: 5px;
+        display: inline;
+        font-family: $side_menu_font;
+        color: white;
+        cursor: pointer;
+        height: 50px;
+        transition: 100ms all linear;
+
+        img {
+          width: 10px;
+          opacity: 0.4;
+        }
+
+        &:hover {
+          color: $title_orange;
+
+          img {
+            opacity: 1;
+          }
+        }
+
+        &:last-child {
+          float: right;
+
+          img {
+            width: 20px;
+            margin-right: 20px;
+            margin-top: 5px;
+            opacity: 0.6;
+
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      }
+
+      #login {
+        line-height: 3;
+        height: 65px;
+        background-color: #000;
+        img {
+          float: left;
+          opacity: 1;
+          margin-left: 5px;
+          margin-top: 5px;
+          width: 30px;
+        }
+        span {
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
 
 @media (min-width: 320px) and (max-width: 599px) {
     #mob_topbar{
@@ -165,23 +381,22 @@ body{
     #trending_now_dropdown {
       display: block;
     }
+    #new_articles {
+      padding-top: 5px
+    }
   }
 }
-.home, .long, .review, .video, .us{
-    border-left: 4px solid $title_orange;
+
+@media (min-width: 1025px) {
+  #mob_topbar {
+    display: none;
+
+  }
+  .extra_div {
+    display: block;
+  }
 }
-.tech, .cars{
-    border-left: 4px solid rgba(74, 233, 27, 0.75);
-}
-.science, .forums{
-    border-left: 4px solid rgb(137, 27, 189);
-}
-.video, .search{
-    border-left: 4px solid rgb(52, 124, 152);
-}
-.enter, .design{
-    border-left: 4px solid rgb(255, 25, 3);
-}
+
 @media (min-width:1024px){
     .visible_sm{
         display: none !important;
@@ -208,80 +423,126 @@ body{
 }
 .side_menu{
     width: 250px;
+    height: 100%;
     background-color: rgba(0,0,0,.5);
     top: 0;
     float: left;
     z-index: 13;
     position: absolute;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
     left: -250px;
     transition-property: transform, left, right;
     transition-delay: 0s, 0s, 0s;
     transition-timing-function: ease-in-out;
     transition-duration: 150ms;
-    // overflow: hidden;
-    li{
-        list-style: none;
-        background-color: #222;
-        border-top: 1px solid #2F2F2F;
-        margin-left: -40px;
-        padding-left: 10px;
-        height: 48px;
-        color: white;
-        line-height: 1;
-        cursor: pointer;
-        font-family: 'Pathway Gothic One', sans-serif;
-        text-transform: uppercase;
-        list-style-type: none;
-        font-size: 20px;
-        &:hover{
-            color: $title_orange;
-        }
-        img{
-            display: inline-block;
-            width: 21px;
-            max-height: 18px;
-            padding-top: 15px;
-            padding-right: 10px;
-        }
 
-    }
-    ul{
-        z-index: 5;
-        // width: 250px;
-        margin-top: 0px;
-        border-right: 2px solid $title_orange;
-        .long{
-            img{
-                padding-top: 25px;
-                }
-            }
-        .user{
-            background-color: #000;
-            // line-height: 3;
-            height: 60px;
-            .login{
-                display: inline-block;
-                float: right;
-                min-width: 170px;
-                max-width: 180px;
-                line-height: 3;
-            }
-            .img{
-                width: 50px;
-                height: 50px;
-                img{
-                    width: 36px;
-                    min-height: 36px;
-                    padding-top: 10px;
-                }
-                // padding: 20px;
-                display: inline-block;
-            }
+    ul {
+    border-right: 3px solid $title_orange;
+    text-transform: uppercase;
+    list-style-type: none;
+    z-index: 100;
+    overflow-y: auto;
+    margin-top: -5px;
+    background-color: #000;
+    width: 250px;
+    padding: 0px 0px;
+    margin: 0px 0px;
+
+    li {
+      line-height: 3;
+      padding-left: 15px;
+      background-color: #222;
+      font-family: $side_menu_font;
+      color: white;
+      border-bottom: 1px solid #2F2F2F;
+      cursor: pointer;
+      height: 50px;
+      border-left: 4px solid;
+      transition: 100ms all linear;
+
+      img {
+        width: 20px;
+        padding-top: 5px;
+        margin-right: 15px;
+      }
+
+      &:hover {
+        color: $title_orange;
+      }
+
+      &:last-child {
+        border-left: 0px;
+        background-color: #000;
+
+        img {
+          width: 30px;
+          margin-left: 10px;
+          opacity: 0.6;
+
+          &:hover {
+            opacity: 1;
+          }
         }
+      }
     }
 
+    #login {
+      line-height: 4;
+      height: 65px;
+      border-left: 0px ;
+      background-color: #000;
+      img {
+        float: left;
+        margin-left: 5px;
+        margin-top: 12px;
+        width: 35px;
+      }
+      span {
+        margin-left: 10px;
+      }
+    }
+    #home {
+      border-left-color: $title_orange;
+    }
+    #longform {
+      border-left-color: rgb(142, 39, 148);
+    }
+    #reviews {
+      border-left-color: rgb(83, 156, 6);
+    }
+    #video {
+      border-left-color: rgb(105, 38, 27);
+    }
+    #tech {
+      border-left-color: rgb(33, 47, 237);
+    }
+    #science {
+      border-left-color: aqua;
+    }
+    #entertainment {
+      border-left-color: $title_red;
+    }
+    #cars {
+      border-left-color: rgb(57, 233, 59);
+    }
+    #design {
+      border-left-color: rgb(152, 139, 27);
+    }
+    #us_world {
+      border-left-color: rgb(18, 152, 144);
+    }
+    #forums {
+      border-left-color: $title_red;
+    }
+    #search {
+      border-left-color: rgb(6, 142, 172);
+    }
+    #more {
+      border-left-color: $title_orange;
+    }
+  }
 }
 .notifsm{
     width: 250px;
@@ -321,6 +582,8 @@ body{
             }
             a{
                 color: black;
+                font-family: $list_article_font;
+                font-weight: 300;
                 text-decoration: none;
                 &:hover{
                     color: $title_orange;
@@ -329,7 +592,9 @@ body{
             }
         }
         .inactive{
-            font-size: .6rem;
+          font-family: $time_font;
+            font-size: 13px;
+            font-weight: 400;
         }
     }
 }
@@ -340,6 +605,15 @@ body{
     position: relative;
     margin-left: -10px;
     margin-right: -20px;
+    max-width: 1024px;
+}
+
+@media (min-width: 1024px)
+{
+  .contents {
+    margin-top: 63px;
+    margin-left: 2%;
+  }
 }
 
 .byline{
@@ -351,9 +625,7 @@ body{
   font-weight: 300;
   margin: .25rem 0 0;
 }
-#h3{
-    font-size: 2rem;
-}
+
 p {
   display: block;
   -webkit-margin-before: 1em;
@@ -485,7 +757,7 @@ h2 {
 #cntnt3{
     background-image: url("../img/len.png");
     &:after{
-        background-color: #292484;
+        background-color: #121982;
         background-image: -webkit-linear-gradient(135deg,#002f4b,#417711);
         background-image: -moz-linear-gradient(135deg,#002f4b,#417711);
         background-image: -o-linear-gradient(135deg,#002f4b,#417711);
